Worked on a couple more exercises.

--- a/Get Started with Open Reproducible Science!.ipynb
+++ b/Get Started with Open Reproducible Science!.ipynb
@@ -146,13 +146,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.\n",
+    "### Rosie's answers\n",
     "\n",
-    "2.\n",
+    "1. Open science is the principle that anyone can access data, scientific methods or other information without proprietary or monetary barriers.\n",
     "\n",
-    "3.\n",
+    "2. Github supports open, reproducible science by providing free access to a number of coding repositories.\n",
     "\n",
-    "### Rosie"
+    "3. No, the file name has spaces in it and is not machine readable.\n",
+    "\n"
    ]
   },
   {
@@ -193,15 +194,20 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "I can write clean code by:\n",
-    "  * `YOUR ANSWER HERE`\n",
+    "  * Using appropriate enters and spaces between code lines\n",
+    "  * Using hastags to comment on what code lines are supposed to do.\n",
+    "  * Listing all the packages used at the top of the code flow.\n",
     "\n",
     "\n",
     "Advantages of clean code include:\n",
-    "  * `YOUR ANSWER HERE`"
+    "  * Reproducability\n",
+    "  * Transparency\n",
+    "  * It looks good for me"
    ]
   },
   {
@@ -437,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "code_folding": [],
     "deletable": false,
@@ -459,19 +465,22 @@
        "'https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/city/time-series/USW00024090/tmax/ann/2/1949-2023.csv'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/city/time-series/USW00024090/tmax/ann/2/1949-2023.csv'\n",
-    "\n"
+    "rapid_temp_url = ('https://www.ncei.noaa.gov/access/monitoring'\n",
+    "                  '/climate-at-a-glance/city/time-series'\n",
+    "                  '/USW00024090/tmax/ann/2/1949-2023.csv')\n",
+    "\n",
+    "rapid_temp_url\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -600,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -616,27 +625,123 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'my_url' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-c44e6fa042a2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#download\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdataframe\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_url\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'col_1'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'col_2'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mdataframe\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'my_url' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>194912</td>\n",
+       "      <td>58.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>195012</td>\n",
+       "      <td>55.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>195112</td>\n",
+       "      <td>54.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>195212</td>\n",
+       "      <td>59.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>195312</td>\n",
+       "      <td>59.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>201812</td>\n",
+       "      <td>57.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>201912</td>\n",
+       "      <td>54.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>202012</td>\n",
+       "      <td>61.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>202112</td>\n",
+       "      <td>62.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>202212</td>\n",
+       "      <td>60.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>74 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Date  Value\n",
+       "0   194912   58.2\n",
+       "1   195012   55.4\n",
+       "2   195112   54.3\n",
+       "3   195212   59.1\n",
+       "4   195312   59.6\n",
+       "..     ...    ...\n",
+       "69  201812   57.4\n",
+       "70  201912   54.7\n",
+       "71  202012   61.8\n",
+       "72  202112   62.1\n",
+       "73  202212   60.9\n",
+       "\n",
+       "[74 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#download\n",
-    "dataframe = pd.read_csv(my_url, header=2, names=['col_1', 'col_2'])\n",
+    "dataframe = pd.read_csv(rapid_temp_url, header = 3, names = ['Date', 'Value'])\n",
     "dataframe\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -652,7 +757,17 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Great work! You called a DataFrame.\n",
+      "✅ Great work! You correctly downloaded data.\n",
+      "You earned 5 of 5 points for downloading data\n"
+     ]
+    }
+   ],
    "source": [
     "# DO NOT MODIFY THIS TEST CELL\n",
     "tmax_df_resp = _\n",
@@ -665,7 +780,7 @@
     "    print('\\u274C Oops - make sure to call your DataFrame for testing.')\n",
     "    \n",
     "summary = [round(val, 2) for val in tmax_df_resp.mean().values]\n",
-    "if summary == [198562.0, 58.89]:\n",
+    "if summary == [198562.0, 59.04]:\n",
     "    points += 4\n",
     "    print('\\u2705 Great work! You correctly downloaded data.')\n",
     "else:\n",
